--- a/RiskWeb/mapgame.html
+++ b/RiskWeb/mapgame.html
@@ -385,12 +385,98 @@
                         <text x="1560.07421875" y="225.01171875" id="provinceLabel95">La Vallée Champorage</text>
                     </g>
                     <g id="roundLabels" style="display:block;font-family:Georgia;font-size:9px;stroke-dasharray:1px;text-anchor:middle;">
-                        <circle r="20" cx="211.76171875" cy="170.19140625" fill="aliceblue" opacity="0.4" />
-                        <circle r="20" cx="345.0390625" cy="158.9921875" fill="aliceblue" opacity="0.4" />
+                        <circle r="20" cx="211.76171875" cy="170.19140625" fill="aliceblue" opacity="0.4" /> <!--L'Ile des Géants-->
+                        <circle r="20" cx="345.0390625" cy="158.9921875" fill="aliceblue" opacity="0.4" /> <!--L'Île Mystèrieuse-->
+                        <circle r="20" cx="175.18359375" cy="320.92578125" fill="aliceblue" opacity="0.4" /> <!--L'Île du Tonnerre-->
+                        <circle r="20" cx="394.71875" cy="283.71875" fill="aliceblue" opacity="0.4" /> <!--Temple Engloutit-->
+                        <circle r="20" cx="1457.125" cy="115.375" fill="aliceblue" opacity="0.4" /> <!--La Fôret de Champignon Géants-->
+                        <circle r="20" cx="1649.328125" cy="93.046875" fill="aliceblue" opacity="0.4" /> <!--La Valée Fongique-->
+                        <circle r="20" cx="1754.8515625" cy="212.4140625" fill="aliceblue" opacity="0.4" /> <!--Le Bois des Champs Eternels-->
+                        <circle r="20" cx="1468.05078125" cy="802.89453125" fill="aliceblue" opacity="0.4" /> <!--Les Pics Jumeaux-->
+                        <circle r="20" cx="280.453125" cy="856.015625" fill="aliceblue" opacity="0.4" /> <!--Le Rivage Bouillonnant-->
+                        <circle r="20" cx="680.66796875" cy="706.08203125" fill="aliceblue" opacity="0.4" /> <!--Le Coeur de Magma-->
+                        <circle r="20" cx="557.29296875" cy="484.88671875" fill="aliceblue" opacity="0.4" /> <!--La Fournaise-->
+                        <circle r="20" cx="448.375" cy="506.125" fill="aliceblue" opacity="0.4" /> <!--La Forge des Âmes-->
+                        <circle r="20" cx="553.3046875" cy="599.3515625" fill="aliceblue" opacity="0.4" /> <!--Les Serres Rocheuse-->
+                        <circle r="20" cx="474.3984375" cy="722.3359375" fill="aliceblue" opacity="0.4" /> <!--Les Flèches Ardentes-->
+                        <circle r="20" cx="364.232421875" cy="628.998046875" fill="aliceblue" opacity="0.4" /> <!--Les Steppes Ardentes-->
+                        <circle r="20" cx="1182.6640625" cy="798.3046875" fill="aliceblue" opacity="0.4" /> <!--Le Sombre Marécage-->
+                        <circle r="20" cx="859.1328125" cy="760.6640625" fill="aliceblue" opacity="0.4" /> <!--La Tourbière-->
+                        <circle r="20" cx="958.859375" cy="835.390625" fill="aliceblue" opacity="0.4" /> <!--Les Rivages Brisès-->
+                        <circle r="20" cx="1019.033203125" cy="662.861328125" fill="aliceblue" opacity="0.4" /> <!--Les Marais Pourrissants-->
+                        <circle r="20" cx="1175.55078125" cy="638.32421875" fill="aliceblue" opacity="0.4" /> <!--Le Bassin des Regrets-->
+                        <circle r="20" cx="1611.443359375" cy="795.990234375" fill="aliceblue" opacity="0.4" /> <!--Les Milles Pointes-->
+                        <circle r="20" cx="1756.21484375" cy="525.37109375" fill="aliceblue" opacity="0.4" /> <!--Les Terres Foudroyées-->
+                        <circle r="20" cx="1619.24609375" cy="486.84765625" fill="aliceblue" opacity="0.4" /> <!--Les Terres Pourpres-->
+                        <circle r="20" cx="1501.77734375" cy="642.92578125" fill="aliceblue" opacity="0.4" /> <!--La Courronne Gelée-->
+                        <circle r="20" cx="1624.5234375" cy="639.9296875" fill="aliceblue" opacity="0.4" /> <!--Les Tranchantes-->
+                        <circle r="20" cx="1708.390625" cy="692.515625" fill="aliceblue" opacity="0.4" /> <!--Le Coeur de Cristal-->
+                        <circle r="20" cx="668.49609375" cy="472.01171875" fill="aliceblue" opacity="0.4" /> <!--Le Cratère Infernal-->
+                        <circle r="20" cx="697.93359375" cy="579.92578125" fill="aliceblue" opacity="0.4" /> <!--Les Pics Fumants-->
+                        <circle r="20" cx="701.7626953125" cy="130.2333984375" fill="aliceblue" opacity="0.4" /> <!--La Caverne des Lamentations-->
+                        <circle r="20" cx="888.96875" cy="97.65625" fill="aliceblue" opacity="0.4" /> <!--La Crypte des Oubliés-->
+                        <circle r="20" cx="1071.0390625" cy="146.3515625" fill="aliceblue" opacity="0.4" /> <!--Le Coeur de Pierre-->
+                        <circle r="20" cx="879.31640625" cy="228.35546875" fill="aliceblue" opacity="0.4" /> <!--La Fosse Sombre-->
+                        <circle r="20" cx="1141.453125" cy="505.546875" fill="aliceblue" opacity="0.4" /> <!--Les Marais Hurlants-->
+                        <circle r="20" cx="272.28515625" cy="726.16015625" fill="aliceblue" opacity="0.4" /> <!--Le Sanctuaire du Courage-->
+                        <circle r="20" cx="1712.94921875" cy="419.12890625" fill="aliceblue" opacity="0.4" /> <!--Les Flèches argentées-->
+                        <circle r="20" cx="1022.96875" cy="519.53125" fill="aliceblue" opacity="0.4" /> <!--Les Terres Ingrates-->
+                        <circle r="20" cx="121.296875" cy="617.859375" fill="aliceblue" opacity="0.4" /> <!--Crête de Givrefeu-->
+                        <circle r="20" cx="157.203125" cy="822.046875" fill="aliceblue" opacity="0.4" /> <!--Citadelle de Feu-->
+                        <circle r="20" cx="1057.69140625" cy="257.35546875" fill="aliceblue" opacity="0.4" /> <!--Les Profondeur Rochenoire-->
+                        <circle r="20" cx="1186.734375" cy="232.328125" fill="aliceblue" opacity="0.4" /> <!--Les Mortemines-->
+                        <circle r="20" cx="1736.62890625" cy="862.35546875" fill="aliceblue" opacity="0.4" /> <!--Citadelle de Glace-->
+                        <circle r="20" cx="1560.07421875" cy="225.01171875" fill="aliceblue" opacity="0.4" /> <!--La Vallée Champorage-->
+
                     </g>
                     <g id="roundtextLabels" style="display:block;font-family:Georgia;font-size:9px;stroke-dasharray:1px;text-anchor:middle;">
                         <text id="text-circle1" name="textName" x="211.76171875" y="170.19140625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">1</text>
                         <text x="345.0390625" y="158.9921875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text>
+                        <text x="175.18359375" y="320.92578125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text>
+
+                        <text x="211.76171875" y="170.19140625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--L'Ile des Géants-->
+                        <text x="345.0390625" y="158.9921875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--L'Île Mystèrieuse-->
+                        <text x="175.18359375" y="320.92578125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--L'Île du Tonnerre-->
+                        <text x="394.71875" y="283.71875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Temple Engloutit-->
+                        <text x="1457.125" y="115.375" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--La Fôret de Champignon Géants-->
+                        <text x="1649.328125" y="93.046875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--La Valée Fongique-->
+                        <text x="1754.8515625" y="212.4140625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Le Bois des Champs Eternels-->
+                        <text x="1468.05078125" y="802.89453125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Pics Jumeaux-->
+                        <text x="280.453125" y="856.015625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Le Rivage Bouillonnant-->
+                        <text x="680.66796875" y="706.08203125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Le Coeur de Magma-->
+                        <text x="557.29296875" y="484.88671875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--La Fournaise-->
+                        <text x="448.375" y="506.125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--La Forge des Âmes-->
+                        <text x="553.3046875" y="599.3515625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Serres Rocheuse-->
+                        <text x="474.3984375" y="722.3359375" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Flèches Ardentes-->
+                        <text x="364.232421875" y="628.998046875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Steppes Ardentes-->
+                        <text x="1182.6640625" y="798.3046875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Le Sombre Marécage-->
+                        <text x="859.1328125" y="760.6640625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--La Tourbière-->
+                        <text x="958.859375" y="835.390625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text><!--Les Rivages Brisès-->
+                        <text x="1019.033203125" y="662.861328125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text><!--Les Marais Pourrissants-->
+                        <text x="1175.55078125" y="638.32421875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Le Bassin des Regrets-->
+                        <text x="1611.443359375" y="795.990234375" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Milles Pointes-->
+                        <text x="1756.21484375" y="525.37109375" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Terres Foudroyées-->
+                        <text x="1619.24609375" y="486.84765625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Terres Pourpres-->
+                        <text x="1501.77734375" y="642.92578125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--La Courronne Gelée-->
+                        <text x="1624.5234375" y="639.9296875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Tranchantes-->
+                        <text x="1708.390625" y="692.515625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Le Coeur de Cristal-->
+                        <text x="668.49609375" y="472.01171875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Le Cratère Infernal-->
+                        <text x="697.93359375" y="579.92578125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Pics Fumants-->
+                        <text x="701.7626953125" y="130.2333984375" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--La Caverne des Lamentations-->
+                        <text x="888.96875" y="97.65625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text><!--La Crypte des Oubliés-->
+                        <text x="1071.0390625" y="146.3515625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text><!--Le Coeur de Pierre-->
+                        <text x="879.31640625" y="228.35546875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text><!--La Fosse Sombre-->
+                        <text x="1141.453125" y="505.546875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Marais Hurlants-->
+                        <text x="272.28515625" y="726.16015625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Le Sanctuaire du Courage-->
+                        <text x="1712.94921875" y="419.12890625" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Flèches argentées-->
+                        <text x="1022.96875" y="519.53125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Terres Ingrates-->
+                        <text x="121.296875" y="617.859375" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text><!--Crête de Givrefeu-->
+                        <text x="157.203125" y="822.046875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Citadelle de Feu-->
+                        <text x="1057.69140625" y="257.35546875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Profondeur Rochenoire-->
+                        <text x="1186.734375" y="232.328125" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Les Mortemines-->
+                        <text x="1736.62890625" y="862.35546875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--Citadelle de Glace-->
+                        <text x="1560.07421875" y="225.01171875" text-anchor="middle" dy="0.3em" fill="black" style="font-size: 20px;font-weight:700">5</text> <!--La Vallée Champorage-->
+
                     </g>
                 </g>
                 <g id="borders" style="fill:none;stroke-linejoin:round;">
@@ -620,6 +706,12 @@
             <audio id="snare" src="assets/audio/bip.mp3" preload="auto"></audio>
 
     </div>
+
+    <div id="next-phase"><button id=btn-next-phase>Passer à la Phase suivante</button></div>
+
+    <div class="anouce-phase wow animated fadeIn" data-wow-duration="3s" data-wow-delay="1s"" id="phase-renfort"><h4>Phase 1/3 <br>RENFORT</h4></div> 
+    <div class="anouce-phase wow animated fadeIn" data-wow-duration="3s" data-wow-delay="1s"" id="phase-combat"><h4>Phase 2/3 <br>COMBAT</h4></div> 
+    <div class="anouce-phase wow animated fadeIn" data-wow-duration="3s" data-wow-delay="1s"" id="phase-manoeuvre"><h4>Phase 3/3 <br>MANOEUVRE</h4></div> 
 
 
     <script src="assets/js/mapgame.js"></script>
